# magloop_pico_code

./: .gitignore  CMakeLists.txt  LICENSE  README.md  magloop_pico.cpp  release  test_code
AccelStepper/: AccelStepper.cpp  AccelStepper.h  CMakeLists.txt
Adafruit-GFX-Library/: Adafruit_GFX.cpp  Adafruit_GFX.h  glcdfont.c
Adafruit_ILI9341/: Adafruit_ILI9341.cpp  Adafruit_ILI9341.h
Adafruit_SPITFT/: Adafruit_SPITFT.cpp  Adafruit_SPITFT.h
AutoTune/: AutoTune.cpp  AutoTune.h  CMakeLists.txt
Button/: Button.cpp  Button.h  CMakeLists.txt
Buttons/: Buttons.cpp  Buttons.h  CMakeLists.txt
Calibrate/: CMakeLists.txt  Calibrate.cpp  Calibrate.h
DDS/: CMakeLists.txt  DDS.cpp  DDS.h
Data/: CMakeLists.txt  Data.cpp  Data.h
DisplayManagement/: CMakeLists.txt  DisplayManagement.cpp  DisplayManagement.h
DisplayUtility/: CMakeLists.txt  DisplayUtility.cpp  DisplayUtility.h
EEPROM/: CMakeLists.txt  EEPROM.cpp  EEPROM.h
EEPROMold/: EEPROM.cpp  EEPROM.h
FrequencyInput/: FrequencyInput.cpp  FrequencyInput.h
GraphPlot/: GraphPlot.cpp  GraphPlot.h
Presets/: CMakeLists.txt  Presets.cpp  Presets.h
Rotary/: Rotary.cpp  Rotary.h
SWR/: CMakeLists.txt  SWR.cpp  SWR.h
StepperManagement/: CMakeLists.txt  StepperManagement.cpp  StepperManagement.h
TuneInputs/: CMakeLists.txt  TuneInputs.cpp  TuneInputs.h
archive/: magloop_pico_test.cpp
archive/AccelStepper_old/: AccelStepper.h
arduino_includes/: Arduino.h
magloop/: StepperManagement.cpp  StepperManagement.h
